// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deletes all projects 1`] = `
<Modal
  contentLabel="qualifiers.delete.TRK"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      qualifiers.delete.TRK
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <Alert
      variant="warning"
    >
      projects_management.delete_all_warning.17
    </Alert>
    qualifiers.delete_confirm.TRK
  </div>
  <footer
    className="modal-foot"
  >
    <SubmitButton
      className="button-red"
      disabled={false}
      onClick={[Function]}
    >
      delete
    </SubmitButton>
    <ResetButtonLink
      onClick={[MockFunction]}
    >
      cancel
    </ResetButtonLink>
  </footer>
</Modal>
`;

exports[`deletes all projects 2`] = `
<Modal
  contentLabel="qualifiers.delete.TRK"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      qualifiers.delete.TRK
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <Alert
      variant="warning"
    >
      projects_management.delete_all_warning.17
    </Alert>
    qualifiers.delete_confirm.TRK
  </div>
  <footer
    className="modal-foot"
  >
    <i
      className="spinner spacer-right"
    />
    <SubmitButton
      className="button-red"
      disabled={true}
      onClick={[Function]}
    >
      delete
    </SubmitButton>
    <ResetButtonLink
      onClick={[MockFunction]}
    >
      cancel
    </ResetButtonLink>
  </footer>
</Modal>
`;

exports[`deletes selected projects 1`] = `
<Modal
  contentLabel="qualifiers.delete.TRK"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      qualifiers.delete.TRK
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <Alert
      variant="warning"
    >
      projects_management.delete_selected_warning.2
    </Alert>
    qualifiers.delete_confirm.TRK
  </div>
  <footer
    className="modal-foot"
  >
    <SubmitButton
      className="button-red"
      disabled={false}
      onClick={[Function]}
    >
      delete
    </SubmitButton>
    <ResetButtonLink
      onClick={[MockFunction]}
    >
      cancel
    </ResetButtonLink>
  </footer>
</Modal>
`;

exports[`deletes selected projects 2`] = `
<Modal
  contentLabel="qualifiers.delete.TRK"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      qualifiers.delete.TRK
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <Alert
      variant="warning"
    >
      projects_management.delete_selected_warning.2
    </Alert>
    qualifiers.delete_confirm.TRK
  </div>
  <footer
    className="modal-foot"
  >
    <i
      className="spinner spacer-right"
    />
    <SubmitButton
      className="button-red"
      disabled={true}
      onClick={[Function]}
    >
      delete
    </SubmitButton>
    <ResetButtonLink
      onClick={[MockFunction]}
    >
      cancel
    </ResetButtonLink>
  </footer>
</Modal>
`;
